[gd_scene load_steps=8 format=2]

[ext_resource path="res://Models/Env/env.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://Audio/ldjam49bgm.ogg" type="AudioStream" id=4]
[ext_resource path="res://Audio/click.wav" type="AudioStream" id=5]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 2.9762, 1.46018, 0.936979 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 5, 5, 0.001 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.12549, 0.12549, 0.12549, 0.47451 )

[node name="Root" type="Spatial"]
script = ExtResource( 2 )

[node name="Areas" type="Spatial" parent="."]

[node name="DeathArea" type="Area" parent="Areas"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0998622, 0 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="Areas/DeathArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.44582, 0 )
shape = SubResource( 1 )

[node name="ZeroArea" type="Area" parent="Areas"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.07506, 0 )
monitoring = false
collision_layer = 2
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Areas/ZeroArea"]
shape = SubResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.996811, 0.0797992, 0, -0.0797992, 0.996811, 0, 1.15376, 2.72921 )
fov = 60.0

[node name="env" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0570047 )

[node name="Level" type="Spatial" parent="."]

[node name="Pieces" type="Spatial" parent="Level"]

[node name="Audio" type="Spatial" parent="."]

[node name="MusicPlayer" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 4 )
volume_db = -16.0
autoplay = true
bus = "Music"

[node name="ClickPlayer" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 5 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Win" type="Control" parent="UI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="UI/Win"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -50.0
margin_right = 100.0
margin_bottom = 50.0
grow_vertical = 2
rect_min_size = Vector2( 200, 100 )
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Middle Panel" type="VBoxContainer" parent="UI/Win"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -40.0
margin_right = 90.0
margin_bottom = 40.0
grow_vertical = 2
rect_min_size = Vector2( 180, 80 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Win/Middle Panel"]
margin_right = 180.0
margin_bottom = 14.0
text = "You win"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Filler" type="Control" parent="UI/Win/Middle Panel"]
margin_top = 18.0
margin_right = 180.0
margin_bottom = 56.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="UI/Win/Middle Panel"]
margin_top = 60.0
margin_right = 180.0
margin_bottom = 80.0
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lose" type="Control" parent="UI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="UI/Lose"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -50.0
margin_right = 100.0
margin_bottom = 50.0
grow_vertical = 2
rect_min_size = Vector2( 200, 100 )
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Middle Panel" type="VBoxContainer" parent="UI/Lose"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -40.0
margin_right = 90.0
margin_bottom = 40.0
grow_vertical = 2
rect_min_size = Vector2( 180, 80 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Lose/Middle Panel"]
margin_right = 180.0
margin_bottom = 14.0
text = "You lose"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Filler" type="Control" parent="UI/Lose/Middle Panel"]
margin_top = 18.0
margin_right = 180.0
margin_bottom = 56.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="UI/Lose/Middle Panel"]
margin_top = 60.0
margin_right = 180.0
margin_bottom = 80.0
text = "Retry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlocksLabel" type="Label" parent="UI"]
anchor_left = 0.01
anchor_top = 0.01
anchor_right = 0.01
anchor_bottom = 0.01
margin_right = 71.0
margin_bottom = 39.2
text = "Blocks left:"

[node name="SuccessProgress" type="ProgressBar" parent="UI"]
anchor_left = 0.5
anchor_top = 0.958
anchor_right = 0.5
anchor_bottom = 0.958
margin_left = -150.0
margin_top = -22.8
margin_right = 150.0
margin_bottom = 8.20001
grow_horizontal = 2
rect_min_size = Vector2( 300, 0 )
max_value = 5.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="UI"]
anchor_left = 0.01
anchor_top = 0.99
anchor_right = 0.01
anchor_bottom = 0.99
margin_top = -20.0
margin_right = 12.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="Areas/DeathArea" to="." method="_on_piece_fall"]
[connection signal="pressed" from="UI/Win/Middle Panel/Button" to="." method="return_to_level_select"]
[connection signal="pressed" from="UI/Lose/Middle Panel/Button" to="." method="restart"]
[connection signal="pressed" from="UI/Button" to="." method="return_to_level_select"]
